# chemical-extractor

./: .gitignore  README.md  extractor.py  pyproject.toml
src/chemicals/: __init__.py
